# AgentMemory

./: .gitignore  .memory-mcp-eval-report.json  .memory-mcp-eval-report.md  .web-pages-hermes-agent-state.json  .web-pages-hermes-agent.log.jsonl  .web-pages-home-assistant-audit.json  .web-pages-home-assistant-smoke.log.jsonl  .web-pages-home-assistant-state.json  .web-pages-home-assistant-verification.json  .web-pages-home-assistant.log.jsonl  .web-pages-litellm-state.json  .web-pages-litellm.log.jsonl  .web-pages-openai-codex-state.json  .web-pages-openai-codex.log.jsonl  .web-pages-openclaw-state.json  .web-pages-openclaw-state.json.backup-20260623T144248Z  .web-pages-openclaw-state.json.backup-20260623T144631Z  .web-pages-openclaw-state.json.backup-20260623T144834Z  .web-pages-openclaw.log.jsonl  .web-pages-paperclip-state.json  .web-pages-paperclip.log.jsonl  .web-pages-pihole-state.json  .web-pages-pihole.log.jsonl  .web-pages-product-docs-smoke-state.json  .web-pages-product-docs-smoke.log.jsonl  .web-pages-proxmox-ve-state.json  .web-pages-proxmox-ve.log.jsonl  .web-pages-vaultwarden-state.json  .web-pages-vaultwarden.log.jsonl  Package.swift  README.md
.web-pages-hermes-agent-rag/: web-page-3-statement-model-hermes-agent-hermes-agent-nousresearch-com-569dff21db.md  (+343 more)
MemoryMCPServer/: README.md  pyproject.toml
MemoryMCPServer/scripts/: deploy.sh  smoke_check.py
MemoryMCPServer/src/memory_mcp/: __init__.py  dates.py  index.py  index_cli.py  metrics.py  queries.py  server.py  storage.py
MemoryMCPServer/tests/: test_query_index.py
(+3747 files in other folders)
