[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
description = "Episodic memory MCP server for the family agent stack"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.4",
    "python-frontmatter>=1.1",
    "python-ulid>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
memory-mcp = "memory_mcp.server:main"
memory-mcp-index = "memory_mcp.index_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
